--- a/mobile/src/main/res/layout/history_list.xml
+++ b/mobile/src/main/res/layout/history_list.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/history_list"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.mynetgear.cheuklaw126.hiit.HistoryList">
+tools:context="com.example.kenneth.hiit.HistoryList">
 
 
 
