--- a/mobile/src/main/res/layout/history_page.xml
+++ b/mobile/src/main/res/layout/history_page.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.mynetgear.cheuklaw126.hiit.ExercisePage"
+    android:name="com.example.kenneth.hiit.ExercisePage"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -183,7 +183,7 @@
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/video_list"
-        android:name="com.mynetgear.cheuklaw126.hiit.VideoListFragment"
+        android:name="com.example.kenneth.hiit.HistoryPage$VideoListFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
