--- a/mobile/src/main/res/layout/youtube_fragment.xml
+++ b/mobile/src/main/res/layout/youtube_fragment.xml
@@ -7,7 +7,7 @@
     <!-- YouTube Fragment -->
     <fragment
         android:id="@+id/fragment_youtube"
-        android:name="com.mynetgear.cheuklaw126.hiit.YouTubeFragment"
+        android:name="com.example.kenneth.hiit.YouTubeFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
