--- a/mobile/src/main/res/layout/activity_register.xml
+++ b/mobile/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mynetgear.cheuklaw126.hiit.RegisterActivity"
+    tools:context="com.example.kenneth.hiit.RegisterActivity"
     android:orientation="vertical">
 
 
