--- a/mobile/src/main/res/drawable/roundedbutton.xml
+++ b/mobile/src/main/res/drawable/roundedbutton.xml
@@ -2,7 +2,7 @@
 <shape  xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="#2fad64" />
     <corners android:bottomRightRadius="12dp"
         android:bottomLeftRadius="12dp"
         android:topRightRadius="12dp"
