--- a/mobile/src/main/res/layout/activity_party.xml
+++ b/mobile/src/main/res/layout/activity_party.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_ready"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/roundedbutton"
