--- a/mobile/src/main/res/layout/activity_chat.xml
+++ b/mobile/src/main/res/layout/activity_chat.xml
@@ -7,13 +7,22 @@
     android:orientation="vertical"
     tools:context=".ChatActivity">
 
-    <TextView
-        android:id="@+id/textView2"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textAlignment="viewEnd" />
+        android:layout_height="450dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="viewEnd" />
+        </LinearLayout>
+    </ScrollView>
 
 
     <EditText
@@ -24,11 +33,5 @@
         android:inputType="text"
         android:selectAllOnFocus="true"
         android:singleLine="true" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Send" />
 
 </LinearLayout>
