--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mynetgear.cheuklaw126.hiit.LoginActivity">
+    tools:context="com.example.kenneth.hiit.LoginActivity">
 
 
     <ImageView
