--- a/mobile/src/main/res/layout/activity_frd.xml
+++ b/mobile/src/main/res/layout/activity_frd.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.mynetgear.cheuklaw126.hiit.frdActivity">
+    tools:context="com.example.kenneth.hiit.frdActivity">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab2"
