--- a/mobile/src/main/res/layout/activity_camera.xml
+++ b/mobile/src/main/res/layout/activity_camera.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.kenneth.hiit.CameraActivity">
+
+    <FrameLayout
+        android:id="@+id/container1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </FrameLayout>
+
     <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <VideoView
             android:id="@+id/vv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true" />
+
         <com.google.android.youtube.player.YouTubePlayerView
             android:id="@+id/videoView1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+        </com.google.android.youtube.player.YouTubePlayerView>
 
     </android.support.constraint.ConstraintLayout>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#000"
 
-        />
+        /-->
 </LinearLayout>
