--- a/mobile/src/main/res/menu/activity_main_drawer.xml
+++ b/mobile/src/main/res/menu/activity_main_drawer.xml
@@ -40,6 +40,11 @@
             android:id="@+id/sugFood"
             android:icon="@drawable/ic_menu_manage"
             android:title="Suggest Food" />
+
+        <item
+            android:id="@+id/debug"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="debug" />
     </group>
 
     <item android:title="Communicate">
