--- a/mobile/src/main/res/layout/activity_food.xml
+++ b/mobile/src/main/res/layout/activity_food.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.mynetgear.cheuklaw126.hiit.foodActivity">
+    tools:context="com.example.kenneth.hiit.foodActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
