--- a/mobile/src/main/res/layout/activity_create_party.xml
+++ b/mobile/src/main/res/layout/activity_create_party.xml
@@ -26,39 +26,42 @@
         android:hint="Room Name"
         android:inputType="textPersonName" />
     </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:orientation="vertical">
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Please type a video link or select one:"/>
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        android:ems="10"
-        android:hint="Video URL"
-        android:inputType="textPersonName" />
-    <Spinner
-        android:id="@+id/videolist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Please type a video link or select one:" />
+
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:ems="10"
+            android:hint="Video URL"
+            android:inputType="textPersonName" />
+
+        <Spinner
+            android:id="@+id/videolist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
 
+            />
+    </LinearLayout>
 
-
-
-        />
-</LinearLayout>
     <Button
         android:id="@+id/btn_create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/roundedbutton"
+        android:elevation="0dp"
         android:text="Create" />
 </LinearLayout>
