--- a/mobile/src/main/res/layout/activity_party.xml
+++ b/mobile/src/main/res/layout/activity_party.xml
@@ -18,5 +18,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/roundedbutton"
-        android:text="pButton" />
+        android:text="GO" />
 </LinearLayout>
