--- a/mobile/src/main/res/layout/app_bar_main.xml
+++ b/mobile/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mynetgear.cheuklaw126.hiit.MainActivity">
+    tools:context="com.example.kenneth.hiit.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
