--- a/mobile/src/main/res/layout/nav_header_main.xml
+++ b/mobile/src/main/res/layout/nav_header_main.xml
@@ -16,8 +16,8 @@
 
     <ImageView
         android:id="@+id/pIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
